# cch24-8bit

./: Cargo.toml  license  readme.md
src/: main.rs
src/cal/: day00.rs  day02.rs  day05.rs  mod.rs
