[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
tower-http = { version = "0.6.2", features = ["trace"] }
